# nt-character-gateway

./: Cargo.toml  Dockerfile  FieldConfig.toml  README.md
.github/workflows/: ci.yml
src/: api_key_client.rs  main.rs
src/character_db/: attribute.rs  attributes.rs  background.rs  battle_base_information.rs  battle_defense_information.rs  battle_information.rs  battle_offense_information.rs  discipline.rs  experience_information.rs  flaw.rs  health_track.rs  health_tracks.rs  item.rs  merit.rs  mod.rs  morality.rs  name_value.rs  physical_defense_pool.rs  player_character.rs  player_character_client.rs  powers.rs  ritual.rs  skill.rs  skills.rs
src/config/: config_client.rs  field_config.rs  field_config_entry.rs  field_name.rs  mod.rs
