[package]
name = "nt-character-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
either = { version = "1.8.0", features = ["serde"] }
google-sheets4 = "4.0.1"
hyper = "0.14.20"
hyper-rustls = "0.23.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
yup-oauth2 = "7.0.1"
